--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 authors = ["Félix Saparelli <felix@passcod.name>"]
 name = "nompose"
 version = "0.1.0"
+license = "Artistic-2.0"
 
 [dependencies.nom]
 version = "4.0.0"
